force-app/main/default/objects/RC_admin__c/RC_admin__c.object-meta.xml
<CustomObject>
    <description>The admins to this project</description>
    <label>RC_admin</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>