force-app/main/default/objects/RC_admin__c/fields/adminEmail__c.field-meta.xml
<CustomField>
    <fullName>adminEmail__c</fullName>
    <label>adminEmail</label>
    <type>Email</type>
</CustomField>