force-app/main/default/objects/RC_admin__c/fields/adminPassword__c.field-meta.xml
<CustomField>
    <fullName>adminPassword__c</fullName>
    <label>adminPassword</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>