force-app/main/default/objects/RC_admin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Admin_Name__c</columns>
    <columns>adminEmail__c</columns>
    <columns>adminPassword__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>